k8s/manifests/90-toolbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
    - name: toolbox
      image: nicolaka/netshoot:latest
      command: ["sleep", "36000"]
  restartPolicy: Never
