k8s/manifests/31-interceptor-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-interceptor-bridge
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
